--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,13 @@
         android:layout_height="match_parent"
         tools:context=".activities.MainActivity">
 
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/sw_competition"
             android:layout_width="match_parent"
@@ -21,7 +28,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toBottomOf="@id/et_search" >
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_competition"
